--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </span>
                 </div>
                 <p class="mbr-section-text mbr-fonts-style align-left display-2">A Discord bot command handler&nbsp;designed to get the hastles out of the way</p>
-                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#tabs1-7">Get Started</a></div>
+                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-9">Get Started</a></div>
             </div>
         </div>
     </div>
