create github pages

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             </div>
                             <div id="collapse3_6" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_6">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run this command:<br><em>bash startbot.sh</em></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run this command:<br><em>bash setup.sh</em></p>
                                 </div>
                             </div>
                         </div>
