create github pages

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                 </a>
             </div>
                 <div class="typed-text pb-3 align-left display-1">
-                    <span class="mbr-section-subtitle mbr-fonts-style display-1"><strong>Starterbot</strong> is<br></span>
+                    <span class="mbr-section-subtitle mbr-fonts-style display-1"><strong>Starterbot is</strong><br></span>
                     <span>
                       <span class="animated-element mbr-bold" data-word3="Light" data-word1="Simple" data-word2="Clean" data-word4="Lorem" data-word5="Ipsum" data-speed="50" data-words="3">
                       </span>
                     </span>
                 </div>
-                <p class="mbr-section-text mbr-fonts-style align-left display-2">command handler&nbsp;designed to get the hastles out of the way</p>
+                <p class="mbr-section-text mbr-fonts-style align-left display-2">A Discord bot command handler&nbsp;designed to get the hastles out of the way</p>
                 <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-9">Get Started</a></div>
             </div>
         </div>
