create github pages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <title>Starterbot</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -39,14 +40,14 @@
                 </a>
             </div>
                 <div class="typed-text pb-3 align-left display-1">
-                    <span class="mbr-section-subtitle mbr-fonts-style display-1"><strong>Starterbot is</strong><br></span>
+                    <span class="mbr-section-subtitle mbr-fonts-style display-1">Starterbot is<br> a</span>
                     <span>
                       <span class="animated-element mbr-bold" data-word3="Light" data-word1="Simple" data-word2="Clean" data-word4="Lorem" data-word5="Ipsum" data-speed="50" data-words="3">
                       </span>
                     </span>
                 </div>
-                <p class="mbr-section-text mbr-fonts-style align-left display-2">A Discord bot command handler&nbsp;designed to get the hastles out of the way</p>
-                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-9">Get Started</a></div>
+                <p class="mbr-section-text mbr-fonts-style align-left display-2">Discord bot command handler&nbsp;designed to get the hastles out of the way</p>
+                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-9">Get Started</a> <a class="btn btn-md btn-warning display-4" type="submit" href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank">Wiki</a></div>
             </div>
         </div>
     </div>
@@ -132,7 +133,7 @@
     </div>         
 </section>
 
-<section class="testimonials2 cid-rlZSefiSAg" id="testimonials2-c">
+<section class="testimonials2 cid-rm0n5WBxkr" id="testimonials2-j">
     
     
 
@@ -145,21 +146,17 @@
                 <div class="card-box">
                     <div class="card-header">
                         <div class="card-img">
-                            <img src="assets/images/face1.jpg" alt="Mobirise">
+                            <img src="assets/images/mbr-120x120.jpg" alt="Mobirise" title="">
                         </div>
                         <h4 class="card-title mbr-fonts-style align-center mb-0 mbr-white display-5">
-                            John Smith
-                        </h4>
+                            Spot Open!</h4>
                     </div>
-                    <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">
-                        Lorem Ipsum dolor sit amet, consectetur adipisicing elit. Ab cupiditate est eveniet.
-                    </p>
+                    <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">Be the first to review this project!</p>
                     <div class="underline align-left">
                          <div class="line"></div>
                     </div>
                     <p class="mbr-text card-sign mbr-fonts-style align-left mb-0 display-7">
-                        Managing Director
-                    </p>
+                        Title</p>
                 </div>
             </div>
 
@@ -168,21 +165,18 @@
                 <div class="card-box">
                     <div class="card-header">
                         <div class="card-img">
-                            <img src="assets/images/face3.jpg" alt="Mobirise">
+                            <img src="assets/images/mbr-120x120.jpg" alt="Mobirise" title="">
                         </div>
-                        <h4 class="card-title mbr-fonts-style align-center mb-0 mbr-white display-5">
-                            John Smith
-                        </h4>
+                        <h4 class="card-title mbr-fonts-style align-center mb-0 mbr-white display-5">Spot Open!</h4>
                     </div>
                     <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">
-                        Lorem Ipsum dolor sit amet, consectetur adipisicing elit. Ab cupiditate est eveniet.
+                        Be the first to review this project!
                     </p>
                     <div class="underline align-left">
                          <div class="line"></div>
                     </div>
                     <p class="mbr-text card-sign mbr-fonts-style align-left mb-0 display-7">
-                        Managing Director
-                    </p>
+                        Title</p>
                 </div>
             </div>
 
@@ -237,11 +231,13 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/typed/typed.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/typed/typed.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
