--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
                             </div>
                             <div id="collapse2_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Run this command in your terminal: <br><em>git clone&nbsp;https://github.com/andrejarrell/Starterbot.git</em></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Run this command in your terminal:</p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">git clone&nbsp;https://github.com/andrejarrell/Starterbot.git</span></p>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +104,8 @@
                             </div>
                             <div id="collapse3_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run this command:<br><em>npm i &amp; node setup.js</em></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run this command:</p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">npm i &amp; node setup.js</span></p>
                                 </div>
                             </div>
                         </div>
