create github pages

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </div>
                             <div id="collapse1_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Make sure you have both <a href="https://git-scm.com/downloads" target="_blank" class="text-info">Git</a> and <a href="https://nodejs.org/en/download/" target="_blank" class="text-info">Nodejs</a> installed.</p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Make sure you have both <a href="https://git-scm.com/downloads" target="_blank" class="text-primary">Git</a> and <a href="https://nodejs.org/en/download/" target="_blank" class="text-primary">Nodejs</a> installed.</p>
                                 </div>
                             </div>
                         </div>
@@ -90,6 +90,7 @@
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text mbr-text display-7">Run this command in your terminal:</p>
                                     <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">git clone&nbsp;https://github.com/andrejarrell/Starterbot.git</span></p>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +120,7 @@
                             <div id="collapse4_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text mbr-text display-7">
-                                       Follow the command format and you'll do great!<br></p>
+                                       Refer to the <a href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank" class="text-primary">Wiki</a> if you have questions!<br></p>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +132,7 @@
             </div>
             </div>
     </div>
-    </div>         
+             
 </section>
 
 <section class="testimonials2 cid-rm0n5WBxkr" id="testimonials2-j">
@@ -147,12 +148,12 @@
                 <div class="card-box">
                     <div class="card-header">
                         <div class="card-img">
-                            <img src="assets/images/mbr-120x120.jpg" alt="Mobirise" title="">
+                            <img src="assets/images/bot-128x128.png" alt="Mobirise" title="">
                         </div>
                         <h4 class="card-title mbr-fonts-style align-center mb-0 mbr-white display-5">
                             Spot Open!</h4>
                     </div>
-                    <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">Be the first to review this project!</p>
+                    <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">Be the first to <a href="mailto:email@andrejarrell.com">review</a> this project!</p>
                     <div class="underline align-left">
                          <div class="line"></div>
                     </div>
@@ -166,12 +167,12 @@
                 <div class="card-box">
                     <div class="card-header">
                         <div class="card-img">
-                            <img src="assets/images/mbr-120x120.jpg" alt="Mobirise" title="">
+                            <img src="assets/images/bot-122x122.png" alt="Mobirise" title="">
                         </div>
                         <h4 class="card-title mbr-fonts-style align-center mb-0 mbr-white display-5">Spot Open!</h4>
                     </div>
                     <p class="mbr-text card-text mbr-fonts-style align-left m-0 display-7">
-                        Be the first to review this project!
+                        Be the first to <a href="mailto:email@andrejarrell.com">review</a> this project!
                     </p>
                     <div class="underline align-left">
                          <div class="line"></div>
