create github pages

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <div id="collapse2_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text mbr-text display-7">Run this command in your terminal:</p>
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">git clone&nbsp;https://github.com/andrejarrell/Starterbot.git</span></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">git clone -b master https://github.com/andrejarrell/Starterbot.git</span></p>
                                 </div>
                                 </div>
                             </div>
