--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                             </div>
                             <div id="collapse3_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run this command:</p>
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">npm i &amp; node setup.js</span></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Enter bot folder and run these commands:</p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">npm install</span></p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7"><span class="command">node setup.js</span></p>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +133,7 @@
                 </div>
             </div>
             </div>
-    </div>
+    
              
 </section>
 
