create github pages

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     JS.ORG</p>
             </div>
             <div class="col-md-12 copyright align-right text2 col-lg-4">
-                <p class="mbr-text mbr-bold mbr-fonts-style display-5"><span style="font-weight: normal;">2019</span> © <a href="https://www.andrejarrell.com" target="_blank" class="text-black">Andre Jarrell</a></p>
+                <p class="mbr-text mbr-bold mbr-fonts-style display-5"><span style="font-weight: normal;">2019 ©</span> <a href="https://www.andrejarrell.com" target="_blank" class="text-black">Andre Jarrell</a></p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <div class="social-list ">
