--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
         <div class="row">
             <div class="col-md-12 text1 col-lg-4">
                 <p class="mbr-text mbr-bold links mbr-fonts-style align-left display-7"> POWERED BY 
-                    JS.ORG</p>
+                    <a href="https://js.org/" target="_blank" class="text-black"><strong>JS.ORG</strong></a></p>
             </div>
             <div class="col-md-12 copyright align-right text2 col-lg-4">
-                <p class="mbr-text mbr-bold mbr-fonts-style display-5"><span style="font-weight: normal;">2019 ©</span> <a href="https://www.andrejarrell.com" target="_blank" class="text-black">Andre Jarrell</a></p>
+                <p class="mbr-text mbr-bold mbr-fonts-style display-5"><span style="font-weight: normal;">2019 © <a href="https://www.andrejarrell.com" target="_blank" class="text-black">Andre Jarrell</a></span></p>
             </div>
             <div class="col-lg-4 col-md-12">
                 <div class="social-list ">
