create github pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/bot-128x128.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="A Discord bot command handler designed to get the hassles out of the way">
   
   <title>Starterbot</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
