--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta property="og:title" content="Starterbot">
-<meta property="og:image" content="https://starterbot.js.org/assets/images/bot-128x128.png"/>
+  <meta property="og:image" content="https://starterbot.js.org/assets/images/bot-128x128.png"/>
 <meta property="og:type" content="website"/>
-<meta property="og:site_name" content="Starterbot"/>
 <meta property="og:keywords" content="Discord, JavaScript, Discord.js, Andre Jarrell"/>
 <meta property="og:locale" content="en-US"/>
 <meta property="og:description" content="A Discord bot command handler designed to get the hassles out of the way">
-<meta name="theme-color" content="#0080FF"/>
+<meta name="theme-color" content="#f0db4f"/>
 </head>
 <body>
   <section class="header4 cid-rlZnX5pxsc mbr-fullscreen mbr-parallax-background" id="header4-0">
