create github pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <meta property="og:locale" content="en-US"/>
 <meta property="og:description" content="A Discord bot command handler designed to get the hassles out of the way">
 <meta name="theme-color" content="#f0db4f"/>
+<meta property="og:site_name" content="Starterbot"/>
 </head>
 <body>
   <section class="header4 cid-rlZnX5pxsc mbr-fullscreen mbr-parallax-background" id="header4-0">
