create github pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </span>
                 </div>
                 <p class="mbr-section-text mbr-fonts-style align-left display-2">Discord bot command handler&nbsp;designed to get the hassles out of the way</p>
-                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-9">Get Started</a> <a class="btn btn-md btn-warning display-4" type="submit" href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank">Wiki</a></div>
+                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-l">Get Started</a> <a class="btn btn-md btn-warning display-4" type="submit" href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank">Wiki</a></div>
             </div>
         </div>
     </div>
