--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <meta property="og:description" content="A Discord bot command handler designed to get the hassles out of the way">
 <meta name="theme-color" content="#f0db4f"/>
 <meta property="og:site_name" content="Starterbot"/>
+
 </head>
 <body>
   <section class="header4 cid-rlZnX5pxsc mbr-fullscreen mbr-parallax-background" id="header4-0">
@@ -53,7 +54,7 @@
                     </span>
                 </div>
                 <p class="mbr-section-text mbr-fonts-style align-left display-2">Discord bot command handler&nbsp;designed to get the hassles out of the way</p>
-                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-l">Get Started</a> <a class="btn btn-md btn-warning display-4" type="submit" href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank">Wiki</a></div>
+                <div class="pt-3 mbr-section-btn align-left"><a class="btn btn-md btn-warning display-4" type="submit" href="index.html#accordion1-l">Get Started</a> <a class="btn btn-md btn-warning display-4" type="submit" href="https://starterbot.js.org/wiki/">Wiki</a></div>
             </div>
         </div>
     </div>
@@ -126,7 +127,7 @@
                             </div>
                             <div id="collapse4_1" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#bootstrap-accordion_1">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Refer to the <a href="https://github.com/andrejarrell/Starterbot/wiki" target="_blank">Wiki</a> if you have questions!</p>
+                                    <p class="mbr-fonts-style panel-text mbr-text display-7">Refer to the <a href="https://starterbot.js.org/wiki/">Wiki</a> if you have questions!</p>
                                 </div>
                             </div>
                         </div>
