--- a/wiki/index.html
+++ b/wiki/index.html
@@ -18,6 +18,7 @@
       loadNavbar: true,
       themeColor: '#0080FF',
       loadSidebar: true,
+      externalLinkTarget: '_blank'
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -33,7 +34,7 @@
       clientSecret: '80f15470b2ca5b9d2ad4b9f3eb3a5761aea7a1ce',
       repo: 'Starterbot',
       owner: 'andrejarrell',
-      admin: ['Github repo collaborators, only these guys can initialize github issues'],
+      admin: ['andrejarrell'],
       // facebook-like distraction free mode
       distractionFreeMode: true
     })
